--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h2>My Second Heading</h2>
+  
+<p>My first poem.</p>
+<p>Otra Rindkopa</p>
 
 </body>
 </html>
